fix add attachment screen on mobile

--- a/src/components/send-attachment-modal/styles.module.scss
+++ b/src/components/send-attachment-modal/styles.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   background-color: #283045;
-  z-index: 1;
+  z-index: 2;
   padding: 30px 24px;
 
   .close-button {
