--- a/src/pages/chat/styles.module.scss
+++ b/src/pages/chat/styles.module.scss
@@ -42,7 +42,6 @@
     justify-content: center;
     padding: 8px 20px;
     position: relative;
-    display: contents;
 
     @include breakpoints.sm {
       flex: 3 0 600px;
